--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 
   <title>Beatriz Herculano</title>
   <link rel="manifest" href="manifest.json">
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PYV6L6MQCC"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PYV6L6MQCC');
+</script>
+
 </head>
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
